# agenttax

./: .gitignore  AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
agenttax/: __init__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  findings.json
demos/02-mcp-marketplace-audit/: SCENARIO.md  findings.json
demos/03-rag-chatbot-pentest/: SCENARIO.md  findings.json
demos/04-computer-use-agent/: SCENARIO.md  findings.json
demos/05-incident-single-finding/: SCENARIO.md  finding.json
demos/06-soc-alert-lines/: SCENARIO.md  alerts.json
demos/07-multi-agent-chain/: SCENARIO.md  findings.json
demos/08-clean-baseline/: SCENARIO.md  findings.json
demos/09-ci-gate-csv/: SCENARIO.md  findings.json
examples/: help.txt  version.txt
ports/: README.md
ports/go/: core.go  core_test.go  go.mod  taxonomy.go
ports/go/cmd/agenttax/: main.go
ports/node/: package-lock.json  package.json  tsconfig.json
ports/node/src/: cli.ts  core.ts  taxonomy.ts
ports/node/test/: smoke.test.ts
ports/rust/: Cargo.toml
ports/rust/src/: lib.rs  main.rs
ports/rust/tests/: smoke.rs
tests/: test_connect.py  test_coverage.py  test_deep.py  test_hardening.py  test_smoke.py
